# Qkron

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PROJECT_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: 20260214_1628_6f75296687a0_add_missing_columns_to_tasks_table.py  20260215_1738_initial_create_tables.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/brand/: Logo.tsx  index.ts
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/ui/: button.tsx  card.tsx  confirm-dialog.tsx  dialog.tsx  label.tsx  loading-spinner.tsx
frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  NotificationsPage.tsx  RegisterPage.tsx  TaskDetailPage.tsx  TaskFormPage.tsx  UsersPage.tsx
frontend/src/services/: api.ts
monitoring/: prometheus.yml
taskmaster/: __init__.py  auth.py  config.py  main.py  schemas.py
taskmaster/api/: __init__.py
taskmaster/api/routes/: auth.py  health.py  notifications.py  tasks.py  users.py
taskmaster/core/: __init__.py  cleanup.py  executor.py  scheduler.py
taskmaster/db/: __init__.py  connection.py  models.py  storage.py
taskmaster/notifications/: __init__.py  email_provider.py  sms_provider.py  webhook_provider.py
taskmaster/services/: __init__.py  notification_service.py  task_service.py
tests/: __init__.py  conftest.py  test_auth.py  test_executor.py  test_health.py  test_scheduler.py  test_tasks.py
